--- a/index.html
+++ b/index.html
@@ -8,6 +8,21 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
+    <h1>Task 1</h1>
+    <h3><u>Fix Bug</u></h3>
+    <a
+      href="https://github.com/ombalapure7/html-guvi-assignment-day9/blob/main/1.bug.html"
+      >Bug Fix 1 is here</a
+    >
+    <hr />
+    <h1>Task 2</h1>
+    <h3><u>Fix Bug</u></h3>
+    <a
+      href="https://github.com/ombalapure7/html-guvi-assignment-day9/blob/main/2.bug.html"
+      >Bug Fix 2 is here</a
+    >
+    <hr />
+    <head></head>
     <h1>Task 3</h1>
     <h3><u>Design contact us from</u></h3>
     <div>
@@ -122,28 +137,46 @@
       <form>
         <p class="title">Yes! I want to subscribe to Mag-O-Zine</p>
         <div class="name-input">
-          <div class="name-input-style"><input type="text"><p>First Name</p></div>
-          <div class="name-input-style"><input type="text"><p>Last Name</p></div>
+          <div class="name-input-style">
+            <input type="text" />
+            <p>First Name</p>
+          </div>
+          <div class="name-input-style">
+            <input type="text" />
+            <p>Last Name</p>
+          </div>
         </div>
         <div class="address-input">
-          <div class="name-input-style"><input type="text"><p>Address</p></div>
+          <div class="name-input-style">
+            <input type="text" />
+            <p>Address</p>
+          </div>
         </div>
         <div class="address-detail">
-          <div class="name-input-style"><input type="text"><p>City</p></div>
-          <div class="name-input-style"><input type="text"><p>State</p></div>
-          <div class="name-input-style"><input type="text"><p>Zip</p></div>
+          <div class="name-input-style">
+            <input type="text" />
+            <p>City</p>
+          </div>
+          <div class="name-input-style">
+            <input type="text" />
+            <p>State</p>
+          </div>
+          <div class="name-input-style">
+            <input type="text" />
+            <p>Zip</p>
+          </div>
         </div>
         <div class="subscription">
           <div>Subscribe For:</div>
-          <div><input type="checkbox">1 year ($19.95)</div>
-          <div><input type="checkbox">2 year ($35.00)</div>
+          <div><input type="checkbox" />1 year ($19.95)</div>
+          <div><input type="checkbox" />2 year ($35.00)</div>
         </div>
         <div class="more-info">
           <div><p>Send me more information about:</p></div>
           <div>
-            <div><input type="checkbox">Computer-Zine</div>
-            <div><input type="checkbox">Fishing-Zine</div>
-            <div><input type="checkbox">Cat-O-Zine</div>
+            <div><input type="checkbox" />Computer-Zine</div>
+            <div><input type="checkbox" />Fishing-Zine</div>
+            <div><input type="checkbox" />Cat-O-Zine</div>
           </div>
         </div>
       </form>
